<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LanCallApp</string>
    <string name="title_activity_audio_talk">AudioTalk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="p2pPhone">Appel P2P</string>
    <string name="localhost">127.0.0.1</string>
    <string name="input_ip">Entrée de l\'ip</string>
    <string name="input_ip_hint">Taper l\'adresse IP du correspondant </string>

    <string name="btn_make_call">Appeler</string>

    <string name="phone_state_wait">Waiting for the answer…</string>
    <string name="phone_state_cancel">Refuser</string>
    <string name="phone_state_answer">Répondre</string>
    <string name="phone_state_invite">Vous êtes invité à répondre à l\'appel</string>
    <string name="appel_pair_pair">Appel pair à pair</string>
    <string name="entrez_l_adresse_ip">Entrez l\'adresse IP</string>
    <string name="_00_00">00:00</string>
    <string name="r_pondre_l_appel">répondre à l\'appel</string>
    <string name="entrez_ladresse_ip">Entrez l\'adresse IP_de_votre_correspondant</string>
    <string name="veuillez_patienter">Veuillez patienter</string>
    <string name="onomo">Onomo</string>
    <string name="appel_annul">Appel Annulé</string>
    <string name="appel_stopp">Appel stoppé</string>
    <string name="appel_entrant">Appel Entrant</string>
    <string name="appel_annule">Appel Annulé</string>
    <string name="todo1">TODO1</string>
    <string name="todo3">TODO</string>
    <string name="todo2">TODO2</string>
    <string name="todo">TODO</string>
</resources>
