<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <!--Vue normalement affichée, interface d'entrée-->
    <LinearLayout
        android:id="@+id/begin_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/appel_pair_pair"
            android:textColor="#000000"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/create_ip_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:text="@string/localhost"/>


        <TextView
            android:id="@+id/Create_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:text="@string/entrez_l_adresse_ip"
            android:textColor="#000000" />

    </LinearLayout>

    <!--La vue de la saisie manuelle de l'adresse IP pour passer un appel-->
    <LinearLayout
        android:id="@+id/user_input_ip_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_input_TargetIp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/entrez_ladresse_ip"
            android:inputType="text"
            android:maxLines="1"
            android:text=""
            android:autofillHints="" />

        <Button
            android:id="@+id/user_input_phoneCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_make_call" />

    </LinearLayout>

        <!--Voir lors de l'appel-->
        <RelativeLayout
            android:id="@+id/calling_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:visibility="visible">
            <RelativeLayout
                android:id="@+id/head_bg"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                >
            </RelativeLayout>

            <TextView
                android:id="@+id/targetid_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/head_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="21sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/head_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="55dp"
                android:gravity="center"
                android:text="@string/veuillez_patienter"
                android:textColor="#9E9E9F"
                android:textSize="14sp" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="26dp">
                <ImageView
                    android:id="@+id/calling_hangup"
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    android:src="@drawable/icon_hangup"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="Annuler"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

        <!--Ceci est la vue pendant la conversation-->
    <RelativeLayout
        android:id="@+id/talking_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="bottom">
            <Chronometer
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:text="@string/_00_00" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:gravity="bottom"
                android:visibility="visible">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_weight="1"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginBottom="26dp">
                    <ImageView
                        android:id="@+id/talking_hangup"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:src="@drawable/icon_hangup"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="Arrêter"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <!--C'est la vue quand la cloche sonne-->
    <RelativeLayout
        android:id="@+id/ring_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <RelativeLayout
            android:id="@+id/ring_head_bg"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            >
        </RelativeLayout>

        <TextView
            android:id="@+id/ring_targetid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ring_head_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/onomo"
            android:textColor="#FFFFFF"
            android:textSize="21sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ring_head_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:text="@string/appel_entrant"
            android:textColor="#9E9E9F"
            android:textSize="14sp" />
        <LinearLayout
            android:id="@+id/ring_ring_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:gravity="bottom">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ring_hang_off"
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    android:contentDescription="@string/todo2"
                    android:src="@drawable/icon_hangup" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="Refuser"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ring_pickup"
                    android:layout_width="66dp"
                    android:layout_height="66dp"
                    android:contentDescription="@string/todo1"
                    android:src="@drawable/icon_mic_picup" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="Accepter"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>